--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: civic_link
-description: "A new Flutter project."
+description: "A Civic Issue Reporting App"
 publish_to: 'none'
 
 version: 1.0.0+1
@@ -11,7 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # Firebase packages (latest stable, mutually compatible)
+  # Firebase packages
   firebase_core: ^4.1.0
   firebase_auth: ^6.0.2
   cloud_firestore: ^6.0.1
@@ -22,6 +22,11 @@ dependencies:
   image_picker: ^1.2.0
   geolocator: ^11.0.1
 
+  # UI Enhancement packages
+  google_fonts: ^6.1.0           # For beautiful typography
+  flutter_vector_icons: ^2.0.0    # For additional icons
+  animated_text_kit: ^4.2.2       # For text animations
+  shimmer: ^3.0.0                 # For shimmer effects
 
 dependency_overrides:
   firebase_auth_web: ^6.0.2
@@ -34,4 +39,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/logo.png  # ← ADD THIS LINE
+    - assets/images/logo.png
+    - assets/images/background/    # For background images if needed
