--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,31 +5,27 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: '>=3.0.0 <4.0.0'  # Add this SDK constraint
 
 dependencies:
   flutter:
     sdk: flutter
 
   # Firebase packages
-  firebase_core: ^4.1.0
-  firebase_auth: ^6.0.2
-  cloud_firestore: ^6.0.1
+  firebase_core: ^2.32.0
+  firebase_auth: ^4.20.0
+  cloud_firestore: ^4.17.5
+  firebase_storage: ^11.7.7 
 
-  # Other dependencies
+  # Other packages
+  animated_text_kit: ^4.2.2
+  geolocator: ^11.1.0
+  image_picker: ^1.0.4
+  google_fonts: ^4.0.5
+  flutter_vector_icons: ^2.0.0
   provider: ^6.1.2
   pin_code_fields: ^8.0.1
-  image_picker: ^1.2.0
-  geolocator: ^11.0.1
-
-  # UI Enhancement packages
-  google_fonts: ^6.1.0           # For beautiful typography
-  flutter_vector_icons: ^2.0.0    # For additional icons
-  animated_text_kit: ^4.2.2       # For text animations
-  shimmer: ^3.0.0                 # For shimmer effects
-
-dependency_overrides:
-  firebase_auth_web: ^6.0.2
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -40,4 +36,3 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/logo.png
-    - assets/images/background/    # For background images if needed
